# wayq

./: .gitignore  CMakeLists.txt  README.md
.claude/skills/from-rhythmecho/: SKILL.md
.claude/skills/publish-wayq/: SKILL.md  SKILL.md.tmp.6460.ebf27de57d95
.claude/skills/publish-wayq/scripts/: mirror_installers.sh
.claude/skills/qbuild/: skill.md
.claude/skills/regress/: skill.md
.claude/skills/sync-feedback/: SKILL.md
.claude/skills/wayq-code/: SKILL.md
.claude/skills/wayq-issues/: SKILL.md
.claude/skills/wayq-regress/: skill.md
.claude/skills/wayq-web/: skill.md
.dispatch/tasks/ci-audit/: output.md  plan.md
.dispatch/tasks/delete-route-switch/: output.md
.dispatch/tasks/eq-svg-wiring/: output.md  plan.md
.dispatch/tasks/impl-filter/: output.md  plan.md
.dispatch/tasks/impl-issue-1/: output.md  plan.md
.dispatch/tasks/modular-architecture/: output.md  plan.md
.dispatch/tasks/wayq-skills-adapt/: output.md  plan.md
.github/workflows/: build.yml
src/: AmberLink.h  AppPrefs.h  BP.cpp  BP.h  Baxandall.cpp  Baxandall.h  CurveCircle.h  DoubleClickTextButton.h  DragAwareTooltipWindow.h  DragTooltipProvider.h  DryWet.cpp  DryWet.h  DualHandleFilterRow.cpp  DualHandleFilterRow.h  DualHandleSlider.cpp  DualHandleSlider.h  EULA.md  Filter.cpp  Filter.h  GUIConstants.h  HpLp.cpp  HpLp.h  IO.cpp  IO.h  Install WayQ.vbs  LEDComponent.h  MeterBar.h  MonoSliderRow.cpp  MonoSliderRow.h  OutFilterRow.cpp  OutFilterRow.h  OutputFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StereoSliderRow.cpp  StereoSliderRow.h  TopPanel.h  WayQLookAndFeel.h  (+6 more)
win/: WayQ.clap
win/WayQ.vst3/Contents/Resources/: moduleinfo.json
win/WayQ.vst3/Contents/x86_64-win/: WayQ.vst3
